--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<body>
+	<header>
+		<!-- <img id = "logo" src = "/assets/tt1-a.png"> -->
+		<h1>Salty Energy</h1>
+		<p>A Maven in Sailing Excellence</p>
+	</header>
+	<div id = "navbar">
+		***navigation bar***
+	</div>
+	<div id = "jumbotron">
+
+	</div>
+
+
+</body>
