removed application.css to not override foundation

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,13 @@
-<body>
-	<header>
-		<!-- <img id = "logo" src = "/assets/tt1-a.png"> -->
-		<h1>Salty Energy</h1>
-		<p>A Maven in Sailing Excellence</p>
-	</header>
-	<div id = "navbar">
-		***navigation bar***
-	</div>
-	<div id = "jumbotron">
 
-	</div>
+<div>
+	Post-ironic Etsy slow-carb, artisan squid ethical cardigan bitters Banksy aesthetic whatever Wes Anderson Williamsburg photo booth plaid. Sustainable irony readymade VHS viral trust fund Blue Bottle, cray twee mustache Pitchfork fashion axe. Selvage authentic mumblecore, quinoa butcher artisan Banksy Portland Truffaut tote bag. YOLO craft beer paleo dreamcatcher. Mlkshk cornhole PBR&B Wes Anderson vinyl hella. Portland fashion axe 8-bit, sartorial High Life Terry Richardson viral quinoa roof party tattooed tousled twee hashtag. 90's YOLO McSweeney's, kogi locavore letterpress bicycle rights freegan Intelligentsia gentrify yr flannel.
+  </br>
+  </br>
+  Tattooed fingerstache craft beer, Marfa brunch keffiyeh messenger bag. Fixie four loko leggings, salvia beard pop-up artisan. 8-bit Carles iPhone, beard keffiyeh tattooed readymade High Life sriracha Helvetica shabby chic viral jean shorts gentrify ennui. Mixtape leggings fashion axe, chia Thundercats Pinterest slow-carb butcher. Vice lo-fi Echo Park slow-carb. Banksy flannel Terry Richardson, pour-over semiotics Neutra Pitchfork fashion axe Williamsburg viral post-ironic tattooed craft beer. 90's keytar small batch DIY, meggings High Life paleo
 
+ 	Post-ironic Etsy slow-carb, artisan squid ethical cardigan bitters Banksy aesthetic whatever Wes Anderson Williamsburg photo booth plaid. Sustainable irony readymade VHS viral trust fund Blue Bottle, cray twee mustache Pitchfork fashion axe. Selvage authentic mumblecore, quinoa butcher artisan Banksy Portland Truffaut tote bag. YOLO craft beer paleo dreamcatcher. Mlkshk cornhole PBR&B Wes Anderson vinyl hella. Portland fashion axe 8-bit, sartorial High Life Terry Richardson viral quinoa roof party tattooed tousled twee hashtag. 90's YOLO McSweeney's, kogi locavore letterpress bicycle rights freegan Intelligentsia gentrify yr flannel.
+  </br>
+  </br>
+  Tattooed fingerstache craft beer, Marfa brunch keffiyeh messenger bag. Fixie four loko leggings, salvia beard pop-up artisan. 8-bit Carles iPhone, beard keffiyeh tattooed readymade High Life sriracha Helvetica shabby chic viral jean shorts gentrify ennui. Mixtape leggings fashion axe, chia Thundercats Pinterest slow-carb butcher. Vice lo-fi Echo Park slow-carb. Banksy flannel Terry Richardson, pour-over semiotics Neutra Pitchfork fashion axe Williamsburg viral post-ironic tattooed craft beer. 90's keytar small batch DIY, meggings High Life paleo
+</div>
 
-</body>
