--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,10 +16,10 @@
 @import url(http://fonts.googleapis.com/css?family=Alfa+Slab+One|Arvo:700|Lora);
 
  /* ---------Reset defaults -----------*/
-* {
+/** {
         padding: 0px;
         margin: 0px;
-}
+}*/
 
 /* ---------------Error/Notice messages ---------- */
 .error {
@@ -32,37 +32,29 @@
 
 /* -------------- Body ------------------- */
 body { 
-    /*    background-image: url(/assets/background/binding_light/binding_light.png)*/;
-        text-align: center;
-        /*font-family: 'Georgia', sans-serif;*/
-        font-family: 'Lora', serif;
+  text-align: center;
+  /*background-image: url(/assets/banner1.jpg);*/
+  /*font-family: 'Georgia', sans-serif;*/
+  font-family: 'Lora', serif;
 }
 
-/* -------------- Header ------------------- */
+ -------------- Header ------------------- 
 
 /*Navy: #180338;*/
 /*Yellow: #E6FF09 */
-header{
+/*header{
 	background-color: #180338;
   color: white;
-  /*text-align: left;*/
   vertical-align: bottom;
   padding: 22px 0 22px 0;
-}
+}*/
 
-header h1{
-  /*font-family: 'Arvo', serif;*/
+/*header h1{
   font-family: Helvetica,Arial,Verdana,'Lucida Sans',sans-serif;
   font-size: 36px;
-}
+}*/
 
-header p{
-}
 
-/*------------Navigation Bar------------*/
-#navbar {
-	border: 1px black dashed;
-}
 
 /*------------Jumbo Image ---------------*/
 #jumbotron {
